# gameserver

./: .gitignore
net/: CMakeLists.linux.cmake  CMakeLists.txt  CMakeLists.win.cmake  old_cmake.cmake
net/cfl/: buffer.cc  buffer.h  cfl.h  config.cc  config.h  connection.cc  connection.h  event_handler_manager.h  global_data_manager.cc  global_data_manager.h  handler_manager.h  module_base.cc  module_base.h  net_config.h  net_engine.cc  net_engine.h  playerobj.cc  playerobj.h  server_define.h  simple_manager.cc  simple_manager.h  singleton.h  static_data.cc  static_data.h
net/cfl/db/: db.h  db_mysql.cc  db_mysql.h  db_sqlite.cc  db_sqlite.h
net/cfl/mail/: mail_manager.cc  mail_manager.h
net/cfl/modules/: mail_module.cc  mail_module.h  module_base.cc  module_base.h  role_module.cc  role_module.h
net/cfl/protos/: base.proto  define.proto  game.proto  login.proto  login_db.proto  message.proto  msg.proto
net/cfl/protos/gen_proto/: base.pb.cc  base.pb.h  define.pb.cc  define.pb.h  game.pb.cc  game.pb.h  login.pb.cc  login.pb.h  login_db.pb.cc  login_db.pb.h  message.pb.cc  message.pb.h  msg.pb.cc  msg.pb.h
net/cfl/shm/: shm.h  shmobj.h  shmpage.cc  shmpage.h  shmpool.cc  shmpool.h
net/cfl/tools/: common.h  proto2cpp.py
net/cmake/: utils.cmake
net/configs/: config.yaml  game_info.yaml  mysql.yaml
net/data/: config.db
net/tests/: test_abseil.cc  test_asio.cc  test_asio_async.cc  test_asio_tcp.cc  test_asio_udp.cc  test_config.cc  test_connection.cc  test_handler.cc  test_log.cc  test_mail.cc  test_mysql.cc  test_net_engine.cc  test_proto.cc  test_role.cc  test_role2.cc  test_role_attacher.cc  test_role_creator.cc  test_role_module.cc  test_role_sqlite.cc  test_simple_manager.cc  test_sqlite3.cc  test_ssm_attacher.cc  test_ssm_creator.cc  test_static_data.cc
